2012-09-03  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/scan.l, gpasm/parse.y, gpasm/macro.c, gpasm/macro.h,
    gpasm/gpasm.h.in: cache the source line before tokenization
    so there is no need to re-read the line for source file

2012-09-02  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gperror.c, gpasm/gperror.h, gpasm/scan.l, gpasm/parse.y,
    gpasm/evaluate.c: error handling reorganization, part 2

2012-09-01  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c: reverted changes introduced by mistake

2012-08-31  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gperror.c, gpasm/gperror.h, gpasm/special.c,
    gpasm/processor.c, gpasm/lst.c, gpasm/evaluate.c,
    gpasm/lst.h, gpasm/coff.c, gpasm/util.c, gpasm/directive.c:
    error handling reorganization
  * gpasm/directive.c: don't die on symbol redefindefinition

2012-08-28  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c: iterative reimplementation of macro_parms_simple(),
    macro_parms_unique(), macro_parms_ok();
    goto & call: don't check range, page boundary or bad address in
    relocatble sections

2012-08-27  Molnar Karoly  <proton7@freemail.hu>
  * lkr/18c601_g.lkr: Changed in "NAME=page" the "END=0x1FFFFF" onto
    the "END=0x3FFFF".
  * header/p12cr509a.inc: New? So far not exist, but the MCU included in
    the gpprocessor.c.

2012-08-27  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/testsuite/gpasm.old/testall:
    don't stop at the first failure, report the number of tests failed
  * gpasm/scan.l: force the scanner to always-interactive
  * pasm/evaluate.c: iterative reimplementation of list_length()
  * libgputils/gpsymbol.c, libgputils/gpsymbol.h:
    added functions hashfunc_len() and get_symbol_len()
  * gpasm/directive.c:
    fixed bug #253 - "[PIC16F]#ifdef problem around macro"

2012-08-19  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/evaluate.c: implemented but ifdef-ed out the fix for shift left > 32,